Did some updates on for the latest release to prepare for CI/CD